src/objects/EnrollmentQuestions__c.object
<CustomObject>
    <description>To collect and grade the questions that are on the Inquiry and potentially Application</description>
    <fields>
        <fullName>GradingType__c</fullName>
        <label>Grading Type</label>
        <picklist>
            <picklistValues>
                <fullName>Grad Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionFormType__c</fullName>
        <label>Question Form Type</label>
        <picklist>
            <picklistValues>
                <fullName>Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambassador</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QuestionInputType__c</fullName>
        <label>Question Input Type</label>
        <picklist>
            <picklistValues>
                <fullName>Radios</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checkboxes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Select</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QuestionReqOp__c</fullName>
        <label>Question Req/Op</label>
        <picklist>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QuestionSortOrder__c</fullName>
        <label>Question Sort Order</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuestionStatus__c</fullName>
        <label>Question Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QuestionText__c</fullName>
        <label>Question Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Enrollment Questions</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>QuestionText__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Question Key</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollment Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>